# grpc-samples

./: README.md
00_Greeter/csharp/GrpcServer/: Program.cs
00_Greeter/csharp/GrpcServer/Services/: GreeterService.cs
00_Greeter/csharp/Shared/Protos/: greet.proto
01_ChatApp/csharp/ChatClient/: Program.cs  Startup.cs
01_ChatApp/csharp/ChatServer/: ChatServer.csproj
01_ChatApp/csharp/ChatServer/Services/: ChatGroup.cs  ChatService.cs
CSharp/: README.md
CSharp/00_Greeter/: README.md
CSharp/00_Greeter/GrpcClient/: GrpcClient.csproj  Program.cs
CSharp/00_Greeter/GrpcServer/: GrpcServer.csproj  Startup.cs
CSharp/00_Greeter/GrpcServer/Properties/: launchSettings.json
CSharp/01_ChatApp/: README.md
CSharp/01_ChatApp/ChatClient/: ChatClient.csproj  ChatStreamingClient.cs  Program.cs
CSharp/01_ChatApp/ChatServer/: Program.cs  Startup.cs
CSharp/01_ChatApp/ChatServer/Services/: ChatService.cs
CSharp/01_ChatApp/Shared/Protos/: chat.proto
CSharp/02_FileTransfer/: README.md
CSharp/02_FileTransfer/FileTransfer.Client/: FileTransferClient.cs  FileTransferClient.csproj  Program.cs  Startup.cs
CSharp/02_FileTransfer/FileTransfer.Client/Storage/: TEST2.txt
CSharp/02_FileTransfer/FileTransfer.Server/: FileTransferServer.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
CSharp/02_FileTransfer/FileTransfer.Server/Services/: FileTransferService.cs
CSharp/02_FileTransfer/FileTransfer.Shared/Protos/: file_transfer.proto
CSharp/03_BinaryStreaming/: README.md
CSharp/03_BinaryStreaming/BinaryStreaming.Client/: BinaryStreaming.Client.csproj  BinaryStreamingClient.cs  Program.cs  Startup.cs  StreamingMessage.cs
CSharp/03_BinaryStreaming/BinaryStreaming.Server/: BinaryStreaming.Server.csproj  Program.cs  Startup.cs
CSharp/03_BinaryStreaming/BinaryStreaming.Server/Properties/: launchSettings.json
CSharp/03_BinaryStreaming/BinaryStreaming.Server/Services/: BinaryStreamingService.cs  ConnectionRepository.cs
CSharp/03_BinaryStreaming/BinaryStreaming.Shared/: BinaryStreaming.Shared.csproj  BinaryStreaming.cs
Cpp/01_ChatApp/: CMakeLists.txt  README.md
Cpp/01_ChatApp/Client/: ChatStreamingClient.h  main.cpp
Cpp/03_BinaryStreaming/: .gitignore  CMakeLists.txt  README.md
Cpp/03_BinaryStreaming/Client/: BinaryStreamingClient.h  StreamingMessage.h  main.cpp
Cpp/03_BinaryStreaming/Shared/: binarystreaming.grpc.pb.cc  binarystreaming.grpc.pb.h
Cpp/cmake/: common.cmake
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/: README.md
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/01_ChatApp/Scenes/: ChatClient.unity
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/01_ChatApp/Scripts/: ChatApp.cs  ChatUIView.cs
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/02_FileTransfer/Scenes/: FileTransferClient.unity
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/02_FileTransfer/Scripts/: FileTransferApp.cs  FileTransferUIView.cs
GrpcSamples.Client.Unity/Assets/GrpcSamples.Client.Unity/03_BinaryStreaming/Scenes/: BinaryStreamingClient.unity
GrpcSamples.Client.Unity/Assets/Plugins/: .gitignore  README.md
GrpcSamples.Client.Unity/Assets/StreamingAssets/TestData/: TEST.txt
GrpcSamples.Client.Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+2 files in other folders)
